HAJ-1417 : view count of applicant based on age range for current season